--- a/bloodDonation.css
+++ b/bloodDonation.css
@@ -1,37 +1,66 @@
-nav {
-  background-color: #f1f1f1; /* Light grey color */
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 20px;
-}
-
-.logo img {
-  height: 40px;
-}
-
-.nav-links {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  padding: 0;
+body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family:'josefin Sans',sans-serif;
 }
-
-.nav-links li {
-  margin-right: 20px;
+.hero{
+  height:100vh;
+  width:100%;
+  background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url("https://c4.wallpaperflare.com/wallpaper/813/19/604/girl-white-black-art-wallpaper-preview.jpg");
+  background-size: cover;
+  background-position: center;
 }
-
-.nav-links li a {
+nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between ;
+  padding-top: 20px;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+.logo{
+  color:white;
+  font-size: 28px;
+}
+span{
+  color:#ea1538;
+}
+nav ul li{
+  list-style-type: none;
+  display:inline-block;
+  padding:10px 20px
+}
+nav ul li a{
+  color:white;
   text-decoration: none;
-  color: #333;
   font-weight: bold;
 }
-
-.nav-links li a:hover {
-  color: #666; /* Hover color */
+nav ul li a:hover{
+  color:#ea1538;
+  transition: .3s;
 }
+button{
+  border:none;
+  background: #ea1538;
+  padding:12px 30px;
+  border-radius: 30px;
+  color:white;
+  font-weight: bold;
+  font-size: 15px;
+  transition: .4s;
+}
+button:hover{
+  transform: scale(1.3);
+  cursor: pointer;
+
+}
+
+
+
+
+
+
 
 
 
