--- a/bloodDonation.css
+++ b/bloodDonation.css
@@ -5,11 +5,13 @@ body {
   font-family:'josefin Sans',sans-serif;
 }
 .hero{
-  height:100vh;
+  height:120vh;
   width:100%;
+  margin-top: 10px;
   background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url("https://c4.wallpaperflare.com/wallpaper/813/19/604/girl-white-black-art-wallpaper-preview.jpg");
   background-size: cover;
   background-position: center;
+  overflow: hidden;
 }
 nav{
   display: flex;
@@ -40,7 +42,7 @@ nav ul li a:hover{
   color:#ea1538;
   transition: .3s;
 }
-button{
+.button1{
   border:none;
   background: #ea1538;
   padding:12px 30px;
@@ -50,10 +52,43 @@ button{
   font-size: 15px;
   transition: .4s;
 }
-button:hover{
+.button1:hover{
   transform: scale(1.3);
   cursor: pointer;
 
+}
+.menu{
+  display: flex;
+  align-items: center;
+  justify-content: space-between ;
+}
+.text-menu{
+  margin-left: 50px;
+  margin-top: 5px;
+  font-size: xx-large;
+  font-family: 'Playfair Display', serif;
+  line-height:80px ;
+}
+.one{
+  font-size: 20px;
+  line-height: 30px;
+}
+.image img{
+  height: 500px;
+}
+.button2{
+  border:none;
+  background: #ea1538;
+  padding:12px 30px;
+  border-radius: 30px;
+  color:white;
+  font-weight: bold;
+  font-size: 15px;
+  transition: .4s;
+}
+.button2:hover{
+  transform: scale(1.3);
+  cursor: pointer;
 }
 
 
