--- a/bloodDonation.css
+++ b/bloodDonation.css
@@ -7,7 +7,6 @@ body {
 .hero{
   height:120vh;
   width:100%;
-  margin-top: 10px;
   background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url("https://c4.wallpaperflare.com/wallpaper/813/19/604/girl-white-black-art-wallpaper-preview.jpg");
   background-size: cover;
   background-position: center;
@@ -90,6 +89,21 @@ nav ul li a:hover{
   transform: scale(1.3);
   cursor: pointer;
 }
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 1.5; /* Adjust the line height as desired */
+}
+
+.menu-image img {
+  max-width: 350px;
+  height: auto;
+  border-radius: 5px;
+}
+
+
 
 
 
